# Knower

./: .gitignore  README.md  Roadmap.md  dog-facts.txt  main.py  pyproject.toml
app/: chat.py  db.py  models.py  window.py  worker.py
dataset/: cat-facts-rewritten.txt
helper/: file_manager.py  logger.py  menu.py  reader.py
rag/: database.py  loader.py  model_manager.py  text_splitter.py
rag/helper/: file_manager.py  file_record.py
rag/utils/: file_manager.py  logger.py
sample-dataset/: animals.txt  birds.txt  cats.txt  dogs.txt  history.txt  humans.txt  python.txt  space.txt
src/: database.py  loader.py  main.py  text_splitter.py
tmp/log/: .gitignore
