[project]
name = "knower"
version = "0.1"
description = "A RAG that can help you study, by letting you get insights for you documents from your local knowledge base"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
]
