[project]
name = "knower"
version = "0.2"
description = "A RAG that can help you study, by letting you get insights for you documents from your local knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf-layout>=1.28.0",
    "pymupdf4llm>=1.28.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
]
